test/end-to-end/compile-errors/auto-fun-spec-from-wrong-module.crow
no-std
import
	crow/bool: bool
	crow/misc: new, void

main void()
	()

equal[t] spec
	== bool(a t, b t)

r record
== bool(a r, b r)
